[package]
name = "retrotex"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33"
egui_extras = { version = "0.33", features = ["svg"] }
eframe = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
glam = "0.32"
strum = "0.28"
strum_macros = "0.28"
rand = "0.10"
twox-hash = "2.1"
png = "0.18.1"
clap = { version = "4.5.60", features = ["derive"] }
rayon = "1.11.0"
